# Enty-App

./: Cargo.toml  README.md
src/: db.rs  graphql_server.rs  main.rs
src/schema/: mod.rs  subgraph_company.rs  subgraph_med.rs  subgraph_person.rs
ui/: app-window.slint
